--- a/Homepage.html
+++ b/Homepage.html
@@ -43,22 +43,22 @@
 
     <table width="50%" border="0" align="center">
         <tr>
-            <td><a href="../Norway/Norway.html"><img
+            <td><a href="https://achintyabh.github.io/nordictravels.se/Norway.html"><img
                         src="https://cdn.kimkim.com/files/a/content_articles/featured_photos/0b0380328634337d807c971ee73c92fadbc51cdd/big-9a58778640ae1199f127401b5400e01a.jpg"></a>
             </td>
-            <td><a href="../Norway/Norway.html">Norway (Norge/Noreg)</a></td>
+            <td><a href="https://achintyabh.github.io/nordictravels.se/Norway.html">Norway (Norge/Noreg)</a></td>
         </tr>
         <tr>
-            <td><a href="../Sweden/Sweden.html"><img
+            <td><a href="https://achintyabh.github.io/nordictravels.se/Sweden.html"><img
                         src="https://media.cntraveler.com/photos/5989cc72b7a86962e8e27c8a/16:9/w_2560%2Cc_limit/WestSweden_GettyImages-456127449.jpg"></a>
             </td>
-            <td><a href="../Sweden/Sweden.html">Sweden (Sverige)</a></td>
+            <td><a href=https://achintyabh.github.io/nordictravels.se/Sweden.html">Sweden (Sverige)</a></td>
         </tr>
         <tr>
-            <td><a href="../Denmark/Denmark.html"><img
+            <td><a href="https://achintyabh.github.io/nordictravels.se/Denmark.html"><img
                         src="https://media.cntraveler.com/photos/5bfdb12a1b3466234d8136c5/16:9/w_2560,c_limit/GettyImages-1045586638.jpg"></a>
             </td>
-            <td><a href="../Denmark/Denmark.html">Denmark (Danmark)</a></td>
+            <td><a href="https://achintyabh.github.io/nordictravels.se/Denmark.html">Denmark (Danmark)</a></td>
         </tr>
     </table>
     <table width="35%" border="10" align="right">
