--- a/Norway.html
+++ b/Norway.html
@@ -35,22 +35,22 @@
         <td style="width:25%">
             <table border="0">
                 <tr>
-                    <td><a href="../Homepage/Homepage.html"><img
+                    <td><a href="https://achintyabh.github.io/nordictravels.se/Homepage.html"><img
                                 src="https://em-content.zobj.net/source/apple/129/house-with-garden_1f3e1.png"></a>
                     </td>
-                    <td><a href="../Homepage/Homepage.html">Home</a></td>
+                    <td><a href="https://achintyabh.github.io/nordictravels.se/Homepage.html">Home</a></td>
                 </tr>
                 <tr>
-                    <td><a href="../Denmark/Denmark.html"><img
+                    <td><a href="https://achintyabh.github.io/nordictravels.se/Denmark.html"><img
                                 src="https://media.cntraveler.com/photos/5bfdb12a1b3466234d8136c5/16:9/w_2560,c_limit/GettyImages-1045586638.jpg"></a>
                     </td>
-                    <td><a href="../Denmark/Denmark.html">Denmark</a></td>
+                    <td><a href="https://achintyabh.github.io/nordictravels.se/Denmark.html">Denmark</a></td>
                 </tr>
                 <tr>
-                    <td><a href="../Sweden/Sweden.html"><img
+                    <td><a href="https://achintyabh.github.io/nordictravels.se/Sweden.html"><img
                                 src="https://media.cntraveler.com/photos/5989cc72b7a86962e8e27c8a/16:9/w_2560%2Cc_limit/WestSweden_GettyImages-456127449.jpg"></a>
                     </td>
-                    <td><a href="../Sweden/Sweden.html">Sweden</a></td>
+                    <td><a href="https://achintyabh.github.io/nordictravels.se/Sweden.html">Sweden</a></td>
                 </tr>
                 <tr>
                     <td>
