--- a/Sweden.html
+++ b/Sweden.html
@@ -34,22 +34,22 @@
         <td style="width:25%">
             <table border="0">
                 <tr>
-                    <td><a href="../Homepage/Homepage.html"><img
+                    <td><a href="https://achintyabh.github.io/nordictravels.se/Homepage.html"><img
                                 src="https://em-content.zobj.net/source/apple/129/house-with-garden_1f3e1.png"></a>
                     </td>
-                    <td><a href="../Homepage/Homepage.html">Home</a></td>
+                    <td><a href="https://achintyabh.github.io/nordictravels.se/Homepage.html">Home</a></td>
                 </tr>
                 <tr>
-                    <td><a href="../Denmark/Denmark.html"><img
+                    <td><a href="https://achintyabh.github.io/nordictravels.se/Denmark.html"><img
                                 src="https://media.cntraveler.com/photos/5bfdb12a1b3466234d8136c5/16:9/w_2560,c_limit/GettyImages-1045586638.jpg"></a>
                     </td>
-                    <td><a href="../Denmark/Denmark.html">Denmark</a></td>
+                    <td><a href="https://achintyabh.github.io/nordictravels.se/Denmark.html">Denmark</a></td>
                 </tr>
                 <tr>
-                    <td><a href="../Norway/Norway.html"><img
+                    <td><a href="https://achintyabh.github.io/nordictravels.se/Norway.html"><img
                                 src="https://cdn.kimkim.com/files/a/content_articles/featured_photos/0b0380328634337d807c971ee73c92fadbc51cdd/big-9a58778640ae1199f127401b5400e01a.jpg"></a>
                     </td>
-                    <td><a href="../Norway/Norway.html">Norway</a></td>
+                    <td><a href="https://achintyabh.github.io/nordictravels.se/Norway.html">Norway</a></td>
                 </tr>
                 <tr>
                     <td>
