--- a/Norway.html
+++ b/Norway.html
@@ -152,7 +152,7 @@
                         <h3>Svalbard/Longyearbyen & Barentsburg (10 days)</h3>
                         <p>Gaze at the International Seed Vault, and explore Soviet settlements. Flights are not
                             included, and neither are restaurants as then the package would be way over our budget.
-                            Howecer, you could get good night's sleep at Cabin le Arctic Circle.</p>
+                            However, you could get good night's sleep at Cabin le Arctic Circle.</p>
 
 
 
